chore: remove unnecessary api
