# docs/swagger.yaml
@@ -15,134 +15,6 @@ definitions:
       token:
         type: string
     type: object
-  config.AnalyzeStock:
-    properties:
-      AllInOutRatio:
-        type: number
-      AllOutInRatio:
-        type: number
-      CloseChangeRatioHigh:
-        type: number
-      CloseChangeRatioLow:
-        type: number
-      MAPeriod:
-        type: integer
-      MaxHoldTime:
-        type: number
-      RSIMinCount:
-        type: integer
-      TickAnalyzePeriod:
-        type: number
-      VolumePRLimit:
-        type: number
-    type: object
-  config.Config:
-    properties:
-      AnalyzeStock:
-        $ref: '#/definitions/config.AnalyzeStock'
-      History:
-        $ref: '#/definitions/config.History'
-      ManualTrade:
-        type: boolean
-      Quota:
-        $ref: '#/definitions/config.Quota'
-      Simulation:
-        type: boolean
-      TradeFuture:
-        $ref: '#/definitions/config.TradeFuture'
-      TradeStock:
-        $ref: '#/definitions/config.TradeStock'
-    type: object
-  config.History:
-    properties:
-      HistoryClosePeriod:
-        type: integer
-      HistoryKbarPeriod:
-        type: integer
-      HistoryTickPeriod:
-        type: integer
-    type: object
-  config.Quota:
-    properties:
-      FutureTradeFee:
-        type: integer
-      StockFeeDiscount:
-        type: number
-      StockTradeQuota:
-        type: integer
-    type: object
-  config.TradeFuture:
-    properties:
-      AllowTrade:
-        type: boolean
-      BuySellWaitTime:
-        type: integer
-      InOutRatio:
-        type: number
-      MaxHoldTime:
-        type: integer
-      OutInRatio:
-        type: number
-      Quantity:
-        type: integer
-      RateChangeRatio:
-        type: number
-      RateLimit:
-        type: number
-      TargetBalanceHigh:
-        type: number
-      TargetBalanceLow:
-        type: number
-      TickInterval:
-        type: integer
-      TradeOutWaitTimes:
-        type: integer
-      TradeTimeRange:
-        $ref: '#/definitions/config.TradeTimeRange'
-    type: object
-  config.TradeStock:
-    properties:
-      AllowTrade:
-        type: boolean
-      CancelWaitTime:
-        type: integer
-      HoldTimeFromOpen:
-        type: number
-      Odd:
-        type: boolean
-      TotalOpenTime:
-        type: number
-      TradeInEndTime:
-        type: number
-      TradeInWaitTime:
-        type: integer
-      TradeOutWaitTime:
-        type: integer
-    type: object
-  config.TradeTimeRange:
-    properties:
-      FirstPartDuration:
-        type: integer
-      SecondPartDuration:
-        type: integer
-    type: object
-  entity.AccountBalance:
-    properties:
-      available_margin:
-        type: number
-      balance:
-        type: number
-      date:
-        type: string
-      id:
-        type: integer
-      risk_indicator:
-        type: number
-      today_margin:
-        type: number
-      yesterday_margin:
-        type: number
-    type: object
   entity.Future:
     properties:
       category:
@@ -195,13 +67,6 @@ definitions:
         type: integer
       trade_day:
         type: string
-    type: object
-  entity.IndexStatus:
-    properties:
-      break_count:
-        type: integer
-      price_chg:
-        type: number
     type: object
   entity.NewUser:
     properties:
@@ -386,17 +251,6 @@ definitions:
       trade_day:
         type: string
     type: object
-  entity.TradeIndex:
-    properties:
-      nasdaq:
-        $ref: '#/definitions/entity.IndexStatus'
-      nf:
-        $ref: '#/definitions/entity.IndexStatus'
-      otc:
-        $ref: '#/definitions/entity.IndexStatus'
-      tse:
-        $ref: '#/definitions/entity.IndexStatus'
-    type: object
   resp.Response:
     properties:
       code:
@@ -487,11 +341,6 @@ definitions:
           $ref: '#/definitions/entity.Stock'
         type: array
     type: object
-  v1.subscribeRequest:
-    properties:
-      count:
-        type: integer
-    type: object
   v1.tradeBalance:
     properties:
       future:
@@ -541,26 +390,6 @@ paths:
       summary: Get reborn targets
       tags:
       - Analyze V1
-  /v1/basic/config:
-    get:
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/config.Config'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/resp.Response'
-      security:
-      - JWT: []
-      summary: Get all config
-      tags:
-      - Basic V1
   /v1/basic/stock:
     put:
       consumes:
@@ -589,7 +418,7 @@ paths:
             $ref: '#/definitions/resp.Response'
       security:
       - JWT: []
-      summary: Get all repo stock
+      summary: Get stock detail by stock number
       tags:
       - Basic V1
   /v1/basic/usage/shioaji:
@@ -670,28 +499,6 @@ paths:
       summary: Push message to devices which has push token
       tags:
       - FCM V1
-  /v1/fcm/push/target:
-    post:
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/resp.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/resp.Response'
-      security:
-      - JWT: []
-      summary: Send targets to devices which has push token
-      tags:
-      - FCM V1
   /v1/history/day-kbar/{stock}/{start_date}/{interval}:
     get:
       consumes:
@@ -765,46 +572,6 @@ paths:
       summary: Logout
       tags:
       - User V1
-  /v1/order/account/balance:
-    get:
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/entity.AccountBalance'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/resp.Response'
-      security:
-      - JWT: []
-      summary: Get account balance
-      tags:
-      - Account V1
-  /v1/order/all:
-    get:
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/v1.allOrder'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/resp.Response'
-      security:
-      - JWT: []
-      summary: Get all order
-      tags:
-      - Order V1
   /v1/order/balance:
     get:
       consumes:
@@ -825,48 +592,8 @@ paths:
       summary: Get all trade balance
       tags:
       - Order V1
-  /v1/order/balance/future/last:
-    get:
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/entity.FutureTradeBalance'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/resp.Response'
-      security:
-      - JWT: []
-      summary: Get last future trade balance
-      tags:
-      - Order V1
-  /v1/order/balance/stock/last:
-    get:
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/entity.StockTradeBalance'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/resp.Response'
-      security:
-      - JWT: []
-      summary: Get last stock trade balance
-      tags:
-      - Order V1
-  /v1/order/date/{tradeday}:
-    get:
+  /v1/order/future/{tradeday}:
+    post:
       consumes:
       - application/json
       parameters:
@@ -888,7 +615,27 @@ paths:
             $ref: '#/definitions/resp.Response'
       security:
       - JWT: []
-      summary: Get all order by trade day
+      summary: Get all future order by trade day
+      tags:
+      - Order V1
+  /v1/order/future/all:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v1.allOrder'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/resp.Response'
+      security:
+      - JWT: []
+      summary: Get all order
       tags:
       - Order V1
   /v1/refresh:
@@ -911,22 +658,6 @@ paths:
       summary: Refresh token
       tags:
       - User V1
-  /v1/stream/index:
-    get:
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/entity.TradeIndex'
-      security:
-      - JWT: []
-      summary: Get index
-      tags:
-      - Stream V1
   /v1/stream/snapshot:
     put:
       consumes:
@@ -958,55 +689,6 @@ paths:
       security:
       - JWT: []
       summary: Get snapshots
-      tags:
-      - Stream V1
-  /v1/stream/snapshot/tse:
-    get:
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/entity.StockSnapShot'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/resp.Response'
-      security:
-      - JWT: []
-      summary: Get TSE snapshot
-      tags:
-      - Stream V1
-  /v1/stream/subscribe/snapshot:
-    put:
-      consumes:
-      - application/json
-      parameters:
-      - description: Body
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/v1.subscribeRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/resp.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/resp.Response'
-      security:
-      - JWT: []
-      summary: Subscribe top rank stock tick
       tags:
       - Stream V1
   /v1/targets:
